test_files/s_cproc/macro_object_expand/test_013/e.output
/home/jason/github/stupid_lib/test_files/s_cproc/macro_define/test_013/i.input:1:16: error: "*" may not appear in macro parameter list
 #define MACRO(A*&&& ... 123)
                ^
